# deterministic-compute-mcp

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_STATUS.md  README.md  goal.md
.agents/skills/deterministic-finance/: SKILL.md
.agents/skills/deterministic-finance/agents/: openai.yaml
.agents/skills/expected-value-generation/: SKILL.md
.agents/skills/expected-value-generation/agents/: openai.yaml
.agents/skills/numeric-result-verification/: SKILL.md
.agents/skills/numeric-result-verification/agents/: openai.yaml
apps/mcp-server-ts/: LICENSE  README.md  package-lock.json  package.json
apps/mcp-server-ts/scripts/: stage-cli.mjs
apps/mcp-server-ts/src/: README.md  cli.test.ts  cli.ts  index.ts  schemas.ts  tools.ts
crates/compute-cli/: Cargo.toml
crates/compute-cli/src/: main.rs
crates/compute-core/: Cargo.toml
crates/compute-core/src/: lib.rs
crates/compute-core/src/expression/: mod.rs
crates/compute-core/src/finance/: mod.rs
crates/compute-core/src/precision/: mod.rs
crates/compute-core/src/test_generation/: mod.rs
crates/compute-core/src/units/: mod.rs
crates/compute-core/src/verification/: mod.rs
docs/: architecture.md  interfaces.md  roadmap.md
examples/: README.md  arithmetic-request.json  compute-request.json  compute-response.json  expression-request.json  generate-expected-values-request.json  units-request.json  vat-request.json  verification-request.json
schemas/: compute-request.schema.json  compute-response.schema.json
scripts/: codex-mcp-smoke.sh  codex-skills-mcp-smoke.sh
