[package]
name = "compute-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "compute-cli"
path = "src/main.rs"

[dependencies]
compute-core = { path = "../compute-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
